# solutions

./: .gitignore  README.md  build.py  cgi_compression.py  common.py  compress.py  generic_compression.py  jailctf_compression.py  pyproject.toml  reencode.py  requirements.txt  score.py  show.py  stats.py  test.py
annotated/: task001.py  task002.py  task003.py  task004.py  task005.py  task006.py  task007.py  task008.py  task010.py  task011.py  task016.py  task024.py  task025.py  task027.py  task028.py  task030.py  task031.py  task034.py  task038.py  task039.py  task040.py  task041.py  task042.py  task046.py  task048.py  task049.py  task050.py  task059.py  task060.py  task061.py  task063.py  task064.py  task068.py  task073.py  task074.py  task075.py  task081.py  task084.py  task085.py  task092.py  (+90 more)
camjam/: task002.py  task003.py  task006.py  task009.py  task010.py  task013.py  task016.py  task018.py  task020.py  task021.py  task026.py  task029.py  task034.py  task036.py  task037.py  task038.py  task039.py  task042.py  task043.py  task044.py  task052.py  task054.py  task058.py  task061.py  task062.py  task064.py  task068.py  task069.py  task072.py  task073.py  task074.py  task075.py  task076.py  task078.py  task080.py  task081.py  task084.py  task085.py  task088.py  task089.py  (+135 more)
cgi-compressed/: task001.py  task011.py  task013.py  task018.py  task023.py  task029.py  task033.py  task035.py  task036.py  task042.py  task050.py  task051.py  task054.py  task062.py  task065.py  task066.py  task070.py  task071.py  task077.py  task078.py  task080.py  task081.py  task089.py  (+98 more)
(+1163 files in other folders)
